tests/snapshots/runtime_error_fixtures/RuntimeErrors__exposing_runtime_divide_by_zero.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/RuntimeErrors/exposing_runtime_divide_by_zero.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/RuntimeErrors/ExposingRuntimeTarget.flx
error[E1008]: Division By Zero

Cannot divide by zero.

  examples/runtime_errors/RuntimeErrors/ExposingRuntimeTarget.flx:3:9
  |
3 |         x / 0
  |         ^^^^^

Hint:
  Check divisor is non-zero before division.

Stack trace:
  at ExposingRuntimeTarget.boom (examples/runtime_errors/RuntimeErrors/ExposingRuntimeTarget.flx:3:9)
  at main (examples/runtime_errors/RuntimeErrors/exposing_runtime_divide_by_zero.flx:4:5)
  at <main>
== jit ==
status: 1
stdout:
<empty>
stderr:
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/RuntimeErrors/ExposingRuntimeTarget.flx
error[E1008]: Division By Zero

Cannot divide by zero.

  examples/runtime_errors/RuntimeErrors/ExposingRuntimeTarget.flx:3:9
  |
3 |         x / 0
  |         ^^^^^

Hint:
  Check divisor is non-zero before division.

Stack trace:
  at ExposingRuntimeTarget.boom (examples/runtime_errors/RuntimeErrors/ExposingRuntimeTarget.flx:3:9)
  at main (examples/runtime_errors/RuntimeErrors/exposing_runtime_divide_by_zero.flx:4:5)
  at <main>
